This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

07-Mar-2002 (Lars Duening)  (3.3.180)
    - (xalloc, smalloc.c interpret.c, efuns.c, object.c) Added check
        to prevent the stack from growing into the heap.
    - (smalloc.c) Some expected/found magic word logs were reversed.
    - (doc/efun) Pulami provided a whole bunch of german translations.
    - (efuns.c) to_int() on closures didn't work as advertised
        (reported by Pulami)

06-Mar-2002 (Lars Duening)  (3.3.179)
    - (simulate, interpret.c, gcollect.c) With CHECK_OBJECT_REF, the
        driver continually checks the consistency of the list of
        destructed objects.
    - (doc/efun/get_dir) Updated the manpage and added the german
        version (both provided by Pulami).

05-Mar-2002 (Lars Duening)  (3.3.178)
    - (efuns.c) deep_copy() didn't handle quoted arrays properly (reported
        by Gnomi).
    - (efuns, func_spec) New efun unquote() (suggested by Gnomi).
    - (object, gcollect.c, driver.h) Debug macro CHECK_OBJECT_REF activates
        a trace of blueprint allocations/deallocations, to be used to debug
        the strange refcount bugs recently encountered (b-020228-0).

04-Mar-2002 (Lars Duening)  (3.3.177)
    - (prolang.y) Publically inheriting functions which had been inherited
        protected before now overrides the earlier inherit (reported by
        Gnomi).
    - (ptrtable.c) When allocating a new ptable, the .table[] member is
        cleared.
    - (files.c) New get_dir() flag GETDIR_PATH adds the full absolute
        pathname to the returned filenames (suggested by Pulami).

03-Mar-2002 (Lars Duening)  (3.3.176)
    - (simulate.c) When the driver runs on a fatal error, it calls
        the master lfun notify_shutdown() with "Fatal Error" as argument
        before it dumps core.
    - (configure) Added a check for 'bison -y' when looking for YACC.