@@ -1,13 +1,15 @@
 SYNOPSIS
-        int clonep()
+        int clonep ()
         int clonep (object obj)
         int clonep (string obj)
+        int clonep (mixed  arg)
 
 DESCRIPTION
         The efun returns 1 if <obj> is a clone, and 0 if it is not.
         The <obj> can be given as the object itself, or by its name.
         If <obj> is omitted, the current object is tested.
         Arguments of other types return 0.
+        Objects with replaced programs no longer count as clones.
 
 EXAMPLE
         object o;
