@@ -1,0 +1,10 @@
+SYNOPSIS
+        int intp(mixed arg)
+
+BESCHREIBUNG
+        Liefert 1, wenn das Argument eine Ganzzahl (Integer) ist, ansonsten
+        0.
+
+SIEHE AUCH
+        closurep(E), floatp(E), mappingp(E), objectp(E), pointerp(E),
+        referencep(E), stringp(E), symbolp(E), clonep(E)
