@@ -1,0 +1,14 @@
+SYNOPSIS
+        int symbolp(mixed arg)
+
+BESCHREIBUNG
+        Liefert 1, wenn das Argument ein Symbol ist, ansonsten 0.
+
+BEISPIEL
+        symbolp('foo) liefert 1.
+
+AENDERUNGEN
+        Eingefuehrt in 3.2@70.
+
+SIEHE AUCH
+        intp(E), quote(E)
