@@ -20,16 +20,13 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 180)
-(Parent-Version lpmud 3-3 179)
-(Version-Log "Added a check to prevent the stack from growing into the heap.
-Some expected/found magic word logs were reversed.
-Updated INSTALL regarding the mySQL username/pwd setting.
-A whole bunch of german language efun pages.
-to_int() on closures didn't work as advertised.")
+(Project-Version lpmud 3-3 181)
+(Parent-Version lpmud 3-3 180)
+(Version-Log "Fixed the heap/stack check for architectures with really big address spaces.
+Adding new values to mappings didn't check if the memory was allocated.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 07 Mar 2002 21:22:23 -0700")
+(Checkin-Time "Sat, 09 Mar 2002 23:33:31 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -63,7 +60,7 @@ to_int() on closures didn't work as advertised.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.5 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.37 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.243 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.244 644))
   (HISTORY (lpmud/f/49_HISTORY 1.247 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.14 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -134,7 +131,7 @@ to_int() on closures didn't work as advertised.")
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.5 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.17 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.12 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.19 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.20 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.18 644))
   (src/files.h (lpmud/I/49_files.h 1.1 644))
   (src/files.c (lpmud/I/50_files.c 1.14 644))
@@ -146,13 +143,13 @@ to_int() on closures didn't work as advertised.")
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.6 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.22 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.15 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.16 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.10 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.7 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.9 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.7 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.11 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.39 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.40 644))
   (src/md5.h (lpmud/L/18_md5.h 1.2 644))
   (src/md5.c (lpmud/L/19_md5.c 1.5 644))
   (src/mempools.h (lpmud/D/48_mempools.h 1.2.1.3 644))
@@ -162,7 +159,7 @@ to_int() on closures didn't work as advertised.")
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.15 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.62 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.63 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.4 644))
   (src/parser.c (lpmud/L/13_parser.c 1.1 644))
@@ -244,8 +241,8 @@ to_int() on closures didn't work as advertised.")
   (src/typedefs.h (lpmud/D/50_typedefs.h 1.12.1.2 644))
   (src/wiz_list.h (lpmud/1_wiz_list.h 1.5.1.7 644))
   (src/wiz_list.c (lpmud/2_wiz_list.c 1.13.1.12 644))
-  (src/xalloc.h (lpmud/G/51_xalloc.h 1.14 644))
-  (src/xalloc.c (lpmud/H/0_xalloc.c 1.2.1.6 644))
+  (src/xalloc.h (lpmud/G/51_xalloc.h 1.15 644))
+  (src/xalloc.c (lpmud/H/0_xalloc.c 1.2.1.7 644))
 
   ;; Build files
   (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.3 644))
@@ -828,7 +825,7 @@ to_int() on closures didn't work as advertised.")
   (doc/efun/clear_bit (lpmud/o/15_clear_bit 1.5 644))
   (doc/efun/closurep (lpmud/o/16_closurep 1.3 644))
   (doc/efun/clone_object (lpmud/l/6_clone_obje 1.13 644))
-  (doc/efun/clonep (lpmud/l/7_clonep 1.11 644))
+  (doc/efun/clonep (lpmud/l/7_clonep 1.12 644))
   (doc/efun/clones (lpmud/E/11_clones 1.3 644))
   (doc/efun/command (lpmud/h/41_command 1.6 644))
   (doc/efun/command_stack (lpmud/D/17_command_st 1.3.1.1 644))
@@ -1066,18 +1063,29 @@ to_int() on closures didn't work as advertised.")
 
   (doc/efun/abs.de (lpmud/S/25_abs.de 1.1 644))
   (doc/efun/acos.de (lpmud/S/26_acos.de 1.1 644))
+  (doc/efun/all_inventory.de (lpmud/S/48_all_invent 1.1 644))
   (doc/efun/asin.de (lpmud/S/27_asin.de 1.1 644))
   (doc/efun/atan.de (lpmud/S/28_atan.de 1.1 644))
   (doc/efun/atan2.de (lpmud/S/29_atan2.de 1.1 644))
+  (doc/efun/clonep.de (lpmud/S/49_clonep.de 1.1 644))
+  (doc/efun/closurep.de (lpmud/S/50_closurep.d 1.1 644))
   (doc/efun/cos.de (lpmud/S/30_cos.de 1.1 644))
+  (doc/efun/destruct.de (lpmud/S/51_destruct.d 1.1 644))
   (doc/efun/explode.de (lpmud/S/31_explode.de 1.1 644))
   (doc/efun/file_size.de (lpmud/S/32_file_size. 1.1 644))
+  (doc/efun/floatp.de (lpmud/T/0_floatp.de 1.1 644))
   (doc/efun/get_dir.de (lpmud/S/10_get_dir.de 1.2 644))
   (doc/efun/implode.de (lpmud/S/33_implode.de 1.1 644))
+  (doc/efun/intp.de (lpmud/T/1_intp.de 1.1 644))
+  (doc/efun/mappingp.de (lpmud/T/2_mappingp.d 1.1 644))
+  (doc/efun/pointerp.de (lpmud/T/3_pointerp.d 1.1 644))
+  (doc/efun/referencep.de (lpmud/T/4_referencep 1.1 644))
   (doc/efun/regreplace.de (lpmud/L/35_regreplace 1.2 644))
   (doc/efun/sgn.de (lpmud/S/34_sgn.de 1.1 644))
   (doc/efun/sin.de (lpmud/S/35_sin.de 1.1 644))
   (doc/efun/sprintf.de (lpmud/L/36_sprintf.de 1.3 644))
+  (doc/efun/stringp.de (lpmud/T/5_stringp.de 1.1 644))
+  (doc/efun/symbolp.de (lpmud/T/6_symbolp.de 1.1 644))
   (doc/efun/tan.de (lpmud/S/36_tan.de 1.1 644))
 
   (doc/LPC/alists (lpmud/c/51_alists 1.5 644))
